--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
-  "homepage": "https://yourusername.github.io/usk-social"
+  "homepage": "https://agustinvallejo.github.io/usk-social"
 }
 
