Update homepage URL in package.json, adjust Vite config for custom domain, and modify Navbar logo path to use BASE_URL for improved asset loading.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
-  "homepage": "https://agustinvallejo.github.io/usk-social"
+  "homepage": "https://usk.social"
 }
 
